{
    "name": "Input",
    "maps": [
        {
            "name": "Player",
            "id": "69f26922-3a81-4cb6-b3d1-97d9bc4781b0",
            "actions": [
                {
                    "name": "Lane1",
                    "type": "Button",
                    "id": "aa1e0a8a-15d7-4f41-8687-53a8b1cf88e2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Lane2",
                    "type": "Button",
                    "id": "38b3ea03-3ec7-42b9-b037-6f7c2ff6c8d2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Lane3",
                    "type": "Button",
                    "id": "29467a78-85f4-462b-9f6b-651ea222cb7a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Lane4",
                    "type": "Button",
                    "id": "f0d956e2-28b7-4c1c-931f-78e4e005a4a9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b30acfd6-61f2-41e2-9fe6-7804deb23228",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lane1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "004b74ac-5dd8-4255-b817-edf94328ad02",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lane2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "31d8bcf3-386f-48aa-a866-3de90d412c92",
                    "path": "<Keyboard>/h",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lane3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0d6d040d-d7eb-4518-a98d-a37778cd1f6b",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lane4",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "c2eb3050-56c2-4ae9-8fea-e08cac07264a",
            "actions": [
                {
                    "name": "Menu",
                    "type": "Button",
                    "id": "d5f1adbe-270b-45d3-bf48-c0af0ce1bf3d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Setting",
                    "type": "Button",
                    "id": "651dab59-e94a-43ac-b099-143126c7858d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "049be59a-c2b6-4acf-b4bc-f8ec29365e9c",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aabd4deb-0edd-4d68-8794-5aed265e8f16",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Setting",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Player",
            "bindingGroup": "Player",
            "devices": []
        }
    ]
}